--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -233,29 +233,29 @@
         </div>
         <div class="row text-center font2">
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a asp-controller="home" asp-action="Painting"> <img class="img-fluid " src="~/img/painting.jpg"
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Painting"> <img class="img-fluid " src="~/img/painting.jpg"
                         alt=""></a>
                 <p class="text-center  py-3 fs-4">Paintings</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a href=""> <img class="img-fluid" src="~/img/drawing.jpg" alt=""></a>
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Drawing"> <img class="img-fluid" src="~/img/drawing.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">Drawings</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a href=""><img class="img-fluid" src="~/img/origami.jpg" alt=""> </a>
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Origami"><img class="img-fluid" src="~/img/origami.jpg" alt=""> </a>
                 <p class="text-center py-3 fs-4">Origami</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a href=""> <img class="img-fluid" src="~/img/string_art.jpg" alt=""></a>
-                <p class="text-center py-3 fs-4">String Art</p>
+                <a asp-controller="home" asp-action="Painting" asp-route-category="String-Art"> <img class="img-fluid" src="~/img/string_art.jpg" alt=""></a>
+                <p class="text-center py-3 fs-4">String-Art</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a href=""><img class="img-fluid" src="~/img/sketches.jpg" alt=""></a>
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Sketches"><img class="img-fluid" src="~/img/sketches.jpg" alt=""></a>
                 <p class="text-center py-3 fs-4">Sketches</p>
             </div>
             <div class="col-12 col-sm-6 col-md-4 col-lg-2">
-                <a href=""> <img class="img-fluid" src="~/img/room_decor.jpg" alt=""></a>
-                <p class="text-center py-3 fs-4 ">Room Decor</p>
+                <a asp-controller="home" asp-action="Painting" asp-route-category="Room-Decor"> <img class="img-fluid" src="~/img/room_decor.jpg" alt=""></a>
+                <p class="text-center py-3 fs-4 ">Room-Decor</p>
             </div>
         </div>
         <div class="text-center pt-4 pb-5">
