--- a/Views/Home/CustomArt.cshtml
+++ b/Views/Home/CustomArt.cshtml
@@ -1,57 +1,61 @@
-﻿
-@{
+﻿@{
     ViewData["Title"] = "Custom Art";
 }
-@{ 
+@{
     ViewBag.HideFooter = true;
 }
-    <section class="container-fluid">
-       <div class="row">
-            <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
-                <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
+<section class="container-fluid">
+    <div class="row">
+        <div class="col-lg-6 col-md-6 col-sm-12 col-12 login-section">
+            <img src="~/img/painting1profile.jpg" class="img-fluid" alt="" style="height:100vh;">
+        </div>
+        <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
+            <div class="container pt-4 text-center">
+                <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold fs-1 heading">
+                    <img src="~/img/logo.png" class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Request For
+                    Custom Art
+                </a>
             </div>
-            <div class="col-lg-6 col-md-12 col-sm-12 col-12 pt-5">
-                <div class="container pt-4 text-center">
-                    <a asp-controller="home" asp-action="index" class="navbar-brand font1 text-dark fw-bold fs-1 heading">
-                        <img src="~/img/logo.png"
-                             class="me-3 mb-2" style="width: 3rem; height: 3rem;" alt="">Request For Custom Art
-                    </a>
-                </div>
-                <div class="container d-flex justify-content-center" style="width: fit-content;">
-                    <div class="row pt-2 ms-3">
-                        <div class="row py-2">
-                            <div>
-                                <label for="name" class="form-label">Name</label>
-                                <input type="text" class="form-control" id="name">
-                            </div>
+            <div class="container d-flex justify-content-center" style="width: fit-content;">
+                <div class="row pt-2 ms-3">
+                    @* <div class="row py-2">
+                        <div>
+                        <label for="name" class="form-label">Name</label>
+                        <input type="text" class="form-control" id="name">
+                        </div>
                         </div>
                         <div class="row py-2">
-                            <div>
-                                <label for="inputEmail" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="inputEmail">
-                            </div>
+                        <div>
+                        <label for="inputEmail" class="form-label">Email</label>
+                        <input type="email" class="form-control" id="inputEmail">
+                        </div>
                         </div>
                         <div class="row py-2">
-                            <div>
-                                <label for="inputNumber" class="form-label">Phone number</label>
-                                <input type="number" class="form-control" id="inputNumber">
-                            </div>
+                        <div>
+                        <label for="inputNumber" class="form-label">Phone number</label>
+                        <input type="number" class="form-control" id="inputNumber">
                         </div>
+                        </div> *@
+                    <form method="post">
                         <div class="row py-2">
+
                             <div class="mb-3">
+                                <input type="hidden" name="ArtistId" value="@(ViewBag.ArtistId)">
                                 <label for="exampleFormControlTextarea1" class="form-label">
                                     Describe the artwork you want to buy including the size , style or any
                                     content idea.
                                 </label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"
+                                    name="Description"></textarea>
                             </div>
                         </div>
                         <div class="d-grid gap-2 col-sm-6 col-12 ms-auto me-auto pt-3">
-                            <a href="" class="btn all-buttons btn-primary rounded-pill shadow-none">Send</a>
+                            <button type="submit" class=" btn all-buttons btn-primary rounded-pill
+                                shadow-none">Send</button>
                         </div>
-                    </div>
+                    </form>
                 </div>
             </div>
         </div>
-    </section>
-
+    </div>
+</section>
