--- a/Views/Home/Cart.cshtml
+++ b/Views/Home/Cart.cshtml
@@ -162,7 +162,7 @@
                             </td>
                             <td>
                                 <a asp-controller="home" asp-action="Collection1" asp-route-id="@ViewBag.item.Id"><img
-                                    class="img-fluid img-cover" src="~/uploads/@(ViewBag.item.File)"
+                                    class="img-fluid img-cover" src="@(ViewBag.item.File)"
                                     style="height: 6rem; width: 6rem;" alt=""></a>
                             </td>
                             <td>
