--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -287,7 +287,7 @@
                             }
                             else
                             {
-                                <img src="~/profiles/@(artist.ProfileImage)" class="rounded-circle border img-fluid img-cover"
+                                <img src="@(artist.ProfileImage)" class="rounded-circle border img-fluid img-cover"
                             alt="" style="height: 150px; width: 150px;">
                             }
                             <h5 class="card-title mt-2">@artist.FirstName @artist.LastName</h5>
