--- a/Views/Home/Painting.cshtml
+++ b/Views/Home/Painting.cshtml
@@ -178,7 +178,7 @@
         {
           <div class="col-sm-6 col-md-4 col-lg-3 col-12">
             <figure class="figure">
-              <a asp-controller="home" asp-action="Collection1" asp-route-id="@item.Id"><img src="~/uploads/@(item.File)"
+              <a asp-controller="home" asp-action="Collection1" asp-route-id="@item.Id"><img src="@(item.File)"
               class="figure-img img-fluid rounded" alt="..."></a>
               <figcaption class="figure-caption text-start">@item.Title<span class="float-end"> Rs
                   @item.Price</span>
