update fallback image for artist profile

--- a/Views/Home/Artist1.cshtml
+++ b/Views/Home/Artist1.cshtml
@@ -139,7 +139,7 @@
             <div class="col-lg-3 col-md-4 col-sm-6 col-10 my-2 pb-2">
                 @if (ViewBag.Artist.ProfileImage == null || ViewBag.Artist.ProfileImage == "")
                 {
-                    <img src="~/img/artist1.jpg" class="border rounded-circle img-fluid img-cover" alt=""
+                    <img src="~/img/new_artist.png" class="border rounded-circle img-fluid img-cover" alt=""
                     style="height: 220px; width: 220px;">
                 }
                 else
